Pushing what's done so far

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,9 @@
   "cmake.options.statusBarVisibility": "visible",
   "files.associations": {
     "*.py": "python",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "iostream": "cpp",
+    "unordered_map": "cpp",
+    "functional": "cpp"
   }
 }
